# SlayersWorld

./: .drone.yml  Dockerfile  LICENSE  README.md  launch.sh
Client/: .gitignore  CMakeLists.txt  Client - Raccourci.lnk  client.sln
Client/client/: Define.hpp  Global.hpp  ReadMe.txt  client.cpp  client.vcxproj  client.vcxproj.filters  resource.rc  stdafx.cpp
Client/client/Entities/: AnimationUnit.cpp  AnimationUnit.hpp  Creature.cpp  Creature.hpp  DynamicObject.cpp  DynamicObject.hpp  MovementHandler.cpp  MovementHandler.hpp  Player.cpp  Player.hpp  Unit.cpp  Unit.hpp  WorldObject.cpp  WorldObject.hpp
Client/client/Graphics/: Graphics.cpp  Graphics.hpp  InterfaceManager.cpp  InterfaceManager.hpp  Skin.cpp  Skin.hpp  SkinSprite.cpp  SkinSprite.hpp  SkinsManager.cpp  SkinsManager.hpp  TileSet.cpp  TileSet.hpp  TileSprite.cpp  TileSprite.hpp  Visual.cpp  Visual.hpp  VisualEffect.cpp  VisualEffect.hpp  VisualManager.cpp  VisualManager.hpp  Window.cpp  Window.hpp
Client/client/Graphics/Interface/: HistoryField.cpp  HistoryField.hpp  InterfaceManager.cpp  InterfaceManager.hpp  Menu.cpp  Menu.hpp  MenuBag.cpp  MenuBag.hpp  MenuEquipment.cpp  MenuEquipment.hpp  MenuMain.cpp  MenuMain.hpp  MenuManager.cpp  MenuManager.hpp  MenuQuest.cpp  MenuQuest.hpp  MenuSell.cpp  MenuSell.hpp  MenuSpells.cpp  MenuSpells.hpp  MenuStats.cpp  MenuStats.hpp  MenuTitles.cpp  MenuTitles.hpp  MenuWardrobe.cpp  MenuWardrobe.hpp  QuestionBox.cpp  QuestionBox.hpp  WritingField.cpp  WritingField.hpp
Client/client/Map/: Case.cpp  Case.hpp  Map.cpp  Map.hpp  MapManager.cpp  MapManager.hpp
Client/client/Socket/: Socket.cpp  Socket.hpp
Client/client/System/: CurrencyUtils.hpp  SWType.hpp  WorldPosition.cpp  WorldPosition.hpp
Client/client/System/Resource/: Resource.cpp  Resource.hpp
Client/client/World/: ClockHandler.hpp  ConfigHandler.cpp  ConfigHandler.hpp  PacketDefine.hpp  PacketHandler.cpp  PacketHandler.hpp  World.cpp  World.hpp  WorldPacket.cpp  WorldPacket.hpp
Client/client/World/Events/: Events.cpp  Events.hpp  Movement.cpp  Movement.hpp
Paloma/: Paloma.pro  case.cpp  case.h  config.cpp  config.h  define.h  mainwindow.cpp  mainwindow.cpp.OQ8512  mainwindow.h  mainwindow.ui  map.cpp  map.h  tile.cpp  tile.h  tileprop.cpp  tileprop.h  tileset.cpp  tileset.h
SQL/characters/: charaters.sql  login.sql  structure.sql
Server/: .gitignore  CMakeLists.txt
Server/cmake_modules/: FindCurl.cmake  FindMySQL.cmake  FindSFML.cmake
Server/deploy/: crontab  launch.sh
Server/server/: Define.hpp  Global.hpp  ReadMe.txt  server.cpp  server.vcxproj  server.vcxproj.filters  stdafx.cpp
Server/server/Entities/: AnimationUnit.cpp  AnimationUnit.hpp  Areatrigger.cpp  Areatrigger.hpp  Creature.cpp  Creature.hpp  CreatureAI.cpp  DynamicObject.cpp  DynamicObject.hpp  DynamicObjectManager.cpp  DynamicObjectManager.hpp  GameObject.cpp  GameObject.hpp  GroupManager.cpp  GroupManager.hpp  LevelManager.cpp  LevelManager.hpp  MovementHandler.cpp  MovementHandler.hpp  MovementHandlerCreature.cpp  MovementHandlerCreature.hpp  Player.cpp  Player.hpp  Unit.cpp  Unit.hpp  WorldObject.cpp  WorldObject.hpp
Server/server/Map/: Case.cpp  Case.hpp  Map.cpp  Map.hpp  MapManager.cpp  MapManager.hpp  MapNetwork.cpp  MapTemplate.cpp  MapTemplate.hpp  PathFinding.cpp  Square.cpp  Square.hpp
Server/server/System/: Commands.cpp  SWExit.hpp  SWType.hpp  WebHook.hpp  WorldPosition.cpp  WorldPosition.hpp
Server/server/System/BattleGround/: BG.cpp  BG.hpp  BGCapturePoint.cpp  BGCapturePoint.hpp  BGManager.cpp  BGManager.hpp
Server/server/System/Instance/BattleGround/: BGCapturePoint.cpp  BGCapturePoint.hpp
Server/server/System/Item/: Item.cpp  Item.hpp  ItemManager.cpp  ItemManager.hpp
Server/server/System/Quest/: Quest.cpp  Quest.hpp  QuestManager.cpp  QuestManager.hpp
Server/server/System/Required/: Required.cpp  Required.hpp  RequiredManager.cpp  RequiredManager.hpp  SubRequired.cpp  SubRequired.hpp  SubRequiredLevel.cpp  SubRequiredLevel.hpp  SubRequiredQuest.cpp  SubRequiredQuest.hpp
Server/server/System/Resource/: ResourceAlignment.cpp  ResourceAlignment.hpp  ResourceHealth.cpp  ResourceHealth.hpp  ResourceMana.cpp  ResourceMana.hpp
Server/server/System/Reward/: Reward.cpp  Reward.hpp  RewardManager.cpp  RewardManager.hpp
Server/server/System/Spell/: Aura.cpp  Aura.hpp  AuraEffect.cpp  AuraEffect.hpp  Spell.cpp  Spell.hpp  SpellManager.cpp  SpellManager.hpp  SpellTemplate.cpp  SpellTemplate.hpp
Server/server/World/: ClockHandler.cpp  ClockHandler.hpp  ConfigHandler.cpp  ConfigHandler.hpp  CreatureManager.cpp  CreatureManager.hpp  PacketDefine.hpp  PacketHandler.cpp  PacketHandler.hpp  SqlManager.cpp  SqlManager.hpp  UnitManager.cpp  UnitManager.hpp  World.cpp  World.hpp  WorldPacket.cpp  WorldPacket.hpp  WorldSocket.cpp  WorldSocket.hpp
Server/sql/characters/: characters.sql  structure.sql
Server/sql/world/: structure.sql  world.sql
server/: server.sln
server/Debug/: server.ilk
server/Release/: server.iobj  server.ipdb
server/ipch/SERVER-f8c5802c/: SERVER-44d9311d.ipch  SERVER-474430a3.ipch
server/server/: Map.cpp  Map.hpp  server.cpp  server.vcxproj
server/server/Debug/: server.pch  vc140.idb
server/server/Debug/server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  server.lastbuildstate
server/server/Release/: server.pch
server/server/Release/server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  server.lastbuildstate
